<resources>
    <string name="app_name">MyApp_Component</string>
    <string name="historia">Ben, aos 10 anos de idade, nas férias de verão ele foi acampar com a sua prima Gwen e seu avô Max. Quando resolveu passear depois de um desentendimento com sua prima ele observou um objeto caindo do ceu, logo foi ver, era um esfera metalica e que dentro dela tinha um relógio, o aparelho grudou em seu pulso, e logo descobriu que o nome do aparelho é Omnitrix e que ele guarda o DNA de 10 espécies alienígenas diferentes cada uma com sua caracerística própria, o aparelho tem a capacidade de transformar o usuário em qualquer uma delas.</string>
    <string name="hist_ben">O principal protagonista da série, sua vida é alterada quando um dispositivo alienígena, o Omnitrix, prende-se ao seu pulso durante suas férias de verão com seu avô Max e sua prima Gwen. Desde então passando a ter a capacidade de se transformar em 10 poderosos alienígenas e lutar contra vilões que querem se apossá-lo, dentre eles o senhor da guerra Vilgax.</string>
    <string name="hist_gween">A prima de Ben Tennyson, uma garota muito inteligente e madura. Ela é um dos principais alvos das brincadeiras de seu primo e, apesar de tudo, sempre foi a voz da razão. Ao longo da série, ela desenvolve poderes mágicos.</string>
    <string name="hist_max">Avô de Ben e Gwen, pode ser considerado um dos maiores heróis da série, adora comer coisas estranhas e nojentas. Fazia parte de uma equipe que combatia alienígenas chamada Os Encanadores, todos achavam que ele era, de fato, um encanador, assim como os outros da equipe. Ele já havia ouvido falar do Omnitrix quando fazia parte dos Encanadores.</string>
    <string name="hist_kevin">Um garoto de 11 anos que mora na rua, por isso ele era um marginal , que nasceu com um poder e um dom incrível, podia absorver energia ou que contivesse eletricidade e absorver poderes. também pode absorver o metal. Ele absorveu todos os poderes dos aliens de Ben e se tornou um monstro poderoso.</string>
    <string name="hist_vilgax">Um dos piores inimigos de Ben e Max, ele é o que mais quer o Omnitrix, fazendo de tudo para conseguir. Ele é um alienígena que foi gravemente ferido no começo da série, mas volta mais forte e quase indestrutível, sendo o mais temido no universo.</string>
    <string name="hist_dran">Um brilhante cientista que consegue mutar animais com as suas invenções, criando criaturas extremamente poderosas, todas ao comando dele.</string>
    <string name="hist_cav">Uma organização especializada em pesquisa alienígena e tecnologia avançada. O sub-líder dos Forever Knights é Enoch, e o verdadeiro líder pode ser chamado de o Rei dos Forever Knights, e seu nome é Driscoll que já foi um Encanador.</string>
    <string name="hist_hex">Um verdadeiro mestre em magia que carrega um poderoso bastão, que só funciona nas mãos de um verdadeiro mestre em magia.</string>
    <string name="trans_chama">É um alienígena humanoide da espécie Pyronita, do planeta Pyros, cujo corpo é coberto por rochas vulcânicas. Possui o poder de lançar e também controlar o fogo, podendo causar ou diminuir um incêndio. Sua principal fraqueza é água.</string>
    <string name="trans_besta">É um alienígena de aparência canina da espécie Vulpimancer, oriunda do planeta Vulpin, sendo a única transformação que incapaz de falar. Possui um super olfato, consegue atirar espinhos pelas costas e enxergar em infravermelho (embora não tenha olhos).</string>
    <string name="trans_dia">Pertencente à espécie Petrosapien do extinto planeta Petropia. É um alienígena humanoide feito de tadenita, um cristal alienígena altamente resistente. Pode criar cristais no chão, disparar espinhos e mudar a forma de suas mãos (para formas mais afiadas, como facas).</string>
    <string name="trans_xlr">É um alienígena Kinocelerano, de aparência reptiliana, cujo poder é super velocidade. Possui uma espécie de máscara de proteção, que aparece quando ele corre. Seu planeta natal é Kinet.</string>
    <string name="trans_mc">É o menor alienígena do Omnitrix, sendo capaz de espremer-se em lugares apertados. Sendo um Galvaniano, possui uma super inteligência que o caracteriza como sendo a espécie mais inteligente do relógio. Seu planeta natal é Galvan Mark II.</string>
    <string name="trans_qb">É um alienígena com pele vermelha, quatro olhos e, de forma homônima, quatro braços. Pertencente à espécie de Tetramando do planeta Khoros, sua habilidade é a super-força.</string>
    <string name="trans_ins">É um alien com aparência de inseto e um mau cheiro insuportável. Possui um ferrão afiado como arma, pode disparar uma massa que gruda e voar. Não consegue voar com as asas molhadas. É originário do proveniente do planeta Lepidopterra, sendo da espécie Lepidopiterrano.</string>
    <string name="trans_aqua">Possui uma aparência de peixe, possuindo pernas quando está em terra firme que se transformam em uma cauda (semelhante a de uma sereia) ao entrar na água. É da espécie Pisccis Volann do planeta Pisccis.</string>
    <string name="trans_ultra">É um ser biomecânico, denominado Metamorfo Galvânico, que pode se infiltrar em qualquer objeto tecnológico, sendo capaz de modificá-lo. Também pode disparar raios pelo seu olho. É proveniente de Galvan B.</string>
    <string name="trans_insec">É um alien com aparência de inseto e um mau cheiro insuportável. Possui um ferrão afiado como arma, pode disparar uma massa que gruda e voar. Não consegue voar com as asas molhadas. É originário do proveniente do planeta Lepidopterra, sendo da espécie Lepidopiterrano.</string>
    <string name="trans_fant">É um alienígena de aparência de fantasmagórica, com apenas um olho. Seus poderes incluem atravessar objetos sólidos, mover seu olho pela trilha preta em seu corpo e pode revelar tentáculos em seu peito. Se lutar contra seres intangíveis, sua intangibilidade é inútil. É um Ectonurita originário de Anur Phaetos.</string>
    <string name="saga_one">Aos 10 anos de idade, Ben Tennyson descobre um dispositivo alienígena na floresta chamado o Omnitrix, que lhe permite se transformar em 10 diferentes espécies alienígenas. Ao longo de suas férias de verão, viajando o país num furgão com seu avô Max e de sua prima Gwen, Ben luta contra o crime e alienígenas do mal com seus novos poderes, adquirindo a capacidade de se transformar em mais seis novos alienígenas ao longo do caminho.</string>
    <string name="sagas_fa">Cinco anos após a série original, Ben reaparece sem o Omnitrix, até o desaparecimento de seu avô Max, tendo que colocá-lo de volta, reiniciando e dando a Ben um novo conjunto de 10 alienígenas. Junto de Gwen e seu antigo inimigo Kevin eles partem em missões encarando novos vilões e adquirindo novos alienígenas pelo tempo. A série fora originalmente intitulado Ben 10: Hero Generation.</string>
    <string name="sagas_sa">Após a destruição do Omnitrix original Ben recebe o Superomnitrix, uma versão melhorada do Omnitrix original capaz de evoluir os alienígenas pra formas mais poderosas. E ainda na companhia de Gwen e Kevin o trio vai ao longo do tempo encarando inimigos mais poderosos, adquire novos alienígenas e passam por conflitos do dia a dia.</string>
    <string name="sagas_omn">Gwen e Kevin se mudam para a universidade, e Ben está ansioso para iniciar a sua carreira de herói solo. Porém, Vô Max tem outros planos. Ele escala Rook Blonko, um novo encanador treinado para ser o novo parceiro de Ben. Encarando vários antigos inimigos e explorando uma cidade subterrânea alienígena, Ben irá descobrir que está na mira de um caçador espacial chamado Khyber e um alienígena da mesma espécie do Artrópode chamado Dr. Psychobos tem um ódio por Azmuth e deseja mata-lo junto com o Malware que apareceu no flashback do Ben de 11 anos.</string>
    <string name="sagas_reb">Um reinício de tudo visto antes, o reboot apresentará novos e velhos alienígenas, personagens e vilões, embora com a mesma premissa da série original: Ben, Gwen e Max viajam os EUA nas férias de verão, aonde Ben, com 10 anos, encontra o Omnitrix, que é capaz de transformá-lo em alienígenas.</string>
    <string name="omn_text">O Omnitrix e sua posterior versão o Superomnitrix (Ultimatrix, no original) são o elemento central da série. Eles são dispositivos alienígenas de tecnologia nível 20 desenvolvido por Azmuth, que transforma o usuário em qualquer uma de uma série de seres alienígenas. O Omnitrix aparece nas duas primeiras encarnações da franquia (Ben 10 e Ben 10: Força Alienígena) e o Superomnitrix na terceira encarnação (Ben 10: Supremacia Alienígena). No episódio final de Supremacia Alienígena, Azmuth leva o Superomnitrix de Ben e o substitui por um novo Omnitrix - o original por ter sido apenas um protótipo. Azmuth revela que o verdadeiro propósito do Omnitrix foi permitir que os diversos seres do universo entendessem a vida na pele um do outro, e para ressuscitar espécies inteligentes extintas.</string>
    <string name="cur_enc">São uma organização secreta do governo que protege o público em geral a partir de qualquer ameaça alienígena. Sua base principal está localizada no interior do Monte Rushmore, onde o projetor Nulificador e a Sub-Energia são armazenadas. Seu principal adversário era Vilgax. Max era um membro em sua juventude e acabou por ser o único que o derrotou.</string>
    <string name="cur_ano">São compostos por uma energia vital chamada Mana, que está presente em todos os seres vivos do universo, conhecida como a fonte de vida. São uma raça humanoide de seres de energia do planeta Anodine.</string>
    <string name="cur_galv">São pequenos seres bípedes similares a sapos, naturais de Galvan Prime (atualmente vivem em Galvan Mark II). Eles são naturalmente muito inteligente e podem se inserir dentro de máquinas complexas e utilizá-las a partir do interior. Isto permite-lhes compreender e operar praticamente qualquer computador, mesmo que eles nunca viram antes.</string>
    <string name="cur_sgomn">É o primeiro filme de animação baseado na série Ben 10, estreado no dia 10 de agosto de 2007 nos EUA e no dia 10 de Fevereiro de 2008 no Brasil. O longa aborda novamente um defeito no Omnitrix, que dessa vez ameaça todo o universo com seu modo de autodestruição.</string>
    <string name="cur_corr">Ben volta após as férias de verão, e tem que se adaptar a vida normal. Mas um novo vilão chamado Eon, invade e aterroriza Bellwood. Então Ben precisa impedir que Eon, usando o Omnitrix, liberte os Chronianos (espécie dele) e abra um portal entre a galáxia deles e a da Terra, possibilitando uma invasão a Terra.</string>
    <string name="cur_game">Enquanto Ben dorme próximo ao Grand Canyon, um drone mosquito de Vilgax começa a absorver DNA do Omnitrix. Quando Ben acorda vê um grande objeto (drone gigante) cair no Grand Canyon, junto a diversos drones furiosos invadindo o Parque Nacional.</string>

    <array name="estado">
        <item>São Paulo</item>
        <item>Rio de Janeiro</item>
        <item>Minas Gerais</item>
        <item>Pernambuco</item>
        <item>Maranhão</item>
        <item>Paraná</item>
    </array>
</resources>